experimental push to test aws amplify issue where background image for services section not showing in production but is showing in dev

--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -24,8 +24,10 @@
 	}
 
 	&__bg--dark.show {
-		background: url("../../assets/images/night-bottom.webp") no-repeat center
-			center;
+		border: 2px solid red;
+		// background: url("../../assets/images/night-bottom.webp") no-repeat center
+		// 	center;
+		background: red;
 		background-size: cover;
 		@include mx.servicesBg;
 	}
